{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 14,
  "lineage": "9b8a463d-b458-009c-d84f-3cee4854d312",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "laci_tf_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2031728ef69a466",
            "arn": "arn:aws:ec2:eu-central-1:193096894935:instance/i-0df8f06d1a614cc0d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0df8f06d1a614cc0d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "LaciKeyTF",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05ad44fdb1b06b1b0",
            "private_dns": "ip-10-0-1-110.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.110",
            "public_ip": "18.185.239.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08f2641c7bd9c86b7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b8f623249189a73",
            "tags": {
              "Name": "laci-tf-ec2"
            },
            "tags_all": {
              "Name": "laci-tf-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0164f10f5c516973c"
            ]
          },
          "dependencies": [
            "aws_security_group.laci_tf_sg",
            "aws_subnet.laci_tf_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "laci_tf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:193096894935:internet-gateway/igw-07a9e40aa1fa33417",
            "id": "igw-07a9e40aa1fa33417",
            "owner_id": "193096894935",
            "tags": {
              "Name": "laci_tf_igw_1"
            },
            "tags_all": {
              "Name": "laci_tf_igw_1"
            },
            "vpc_id": "vpc-00ea4d4adda9ebe1c"
          },
          "dependencies": [
            "aws_vpc.laci_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "laci_tf_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:193096894935:route-table/rtb-0294fa433624d73b7",
            "id": "rtb-0294fa433624d73b7",
            "owner_id": "193096894935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07a9e40aa1fa33417",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "laci_tf_public_rt_1"
            },
            "tags_all": {
              "Name": "laci_tf_public_rt_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ea4d4adda9ebe1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.laci_tf_igw",
            "aws_vpc.laci_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "laci_public_rt_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b98ab03c2642edc",
            "route_table_id": "rtb-0294fa433624d73b7",
            "subnet_id": "subnet-09b8f623249189a73"
          },
          "dependencies": [
            "aws_internet_gateway.laci_tf_igw",
            "aws_route_table.laci_tf_public_rt",
            "aws_subnet.laci_tf_public_subnet",
            "aws_vpc.laci_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "laci_tf_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:193096894935:security-group/sg-0164f10f5c516973c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0164f10f5c516973c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "HTTP and SSH (with terraform)",
            "name_prefix": "",
            "owner_id": "193096894935",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00ea4d4adda9ebe1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.laci_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "laci_tf_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:193096894935:subnet/subnet-0742f76de02338b8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0742f76de02338b8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193096894935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "laci_tf_private_subnet_1"
            },
            "tags_all": {
              "Name": "laci_tf_private_subnet_1"
            },
            "vpc_id": "vpc-00ea4d4adda9ebe1c"
          },
          "dependencies": [
            "aws_vpc.laci_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "laci_tf_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:193096894935:subnet/subnet-09b8f623249189a73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b8f623249189a73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193096894935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "laci_tf_public_subnet_1"
            },
            "tags_all": {
              "Name": "laci_tf_public_subnet_1"
            },
            "vpc_id": "vpc-00ea4d4adda9ebe1c"
          },
          "dependencies": [
            "aws_vpc.laci_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "laci_terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:193096894935:vpc/vpc-00ea4d4adda9ebe1c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ed0e176f54754ea0",
            "default_route_table_id": "rtb-0bc7b4c0e86f0f3e9",
            "default_security_group_id": "sg-0082fdf270cb50c3f",
            "dhcp_options_id": "dopt-0b7a3508e080a8e41",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00ea4d4adda9ebe1c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bc7b4c0e86f0f3e9",
            "owner_id": "193096894935",
            "tags": {
              "Name": "laci_terraform_vpc-1"
            },
            "tags_all": {
              "Name": "laci_terraform_vpc-1"
            }
          }
        }
      ]
    }
  ]
}